# youshengshu

./: .gitignore  EXECUTION_REPORT.md  README.md  agent.md  build_release.bat  dev_check.bat  pytest.ini  requirements.txt  run_youshengshu.bat  setup_msvc_env.bat
config/: default_config.json  tts_config.json
desktop/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/scripts/: verify-doctor-parser.mts  write-build-info.mjs
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
scripts/windows/: preflight-runtime.ps1
src/youshengshu/: chapter_splitter.py  cli.py  config.py  config_writer.py  diagnostics.py  exceptions.py  lmstudio_client.py  progress.py  resume_state.py  text_utils.py  translator.py  validation.py
src/youshengshu_tts/: __init__.py  audio_merge.py  cli.py  config.py  diagnostics.py  exceptions.py  manifest.py  pipeline.py  resume.py  runtime.py  segment_store.py  (+1 more)
tests/: conftest.py  test_chapter_splitter.py  test_cli_json.py  test_config.py  test_cosyvoice_runtime.py  test_diagnostics.py  test_gpu_runtime_policy.py  test_lmstudio_client.py  test_progress.py  test_progress_paths.py  test_progress_status.py  test_resume_state.py  test_text_utils.py  test_translation_pipeline.py  test_tts_cli.py  test_tts_cosyvoice_provider.py  test_tts_manifest.py  test_tts_pipeline.py  test_tts_resume.py  test_tts_segmenter.py  test_validation.py
(+44 files in other folders)
